# fluxqueue

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  TODOs.md  mkdocs.yml  pyproject.toml
.github/actions/build-package/: action.yml
.github/actions/build-worker/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: deploy-docs.yml  publish.yml  release-worker.yml  release.yml  tests.yml
.zed/: settings.json
crates/fastqueue-cli/: Cargo.toml
crates/fastqueue-cli/src/: cli.rs  main.rs
crates/fastqueue-common/: Cargo.toml
crates/fastqueue-common/src/: lib.rs  redis_client.rs  serialize.rs  task.rs
crates/fastqueue-common/src/redis/: keys.rs
crates/fastqueue-worker/: Cargo.toml
crates/fastqueue-worker/scripts/: get_functions.py
crates/fastqueue-worker/src/: lib.rs  logger.rs  main.rs  redis_client.rs  worker.rs
crates/fluxqueue-common/: Cargo.toml
crates/fluxqueue-common/src/: serialize.rs
crates/fluxqueue-common/src/redis/: client.rs  keys.rs
crates/fluxqueue-core/: Cargo.toml
crates/fluxqueue-core/src/: lib.rs
crates/fluxqueue-worker/: Cargo.toml
crates/fluxqueue-worker/scripts/: get_functions.py  get_registry.py
crates/fluxqueue-worker/src/: lib.rs  logger.rs  main.rs  redis_client.rs  task.rs  version_check.rs  worker.rs
crates/fluxqueue-worker/tests/: main.py  test_tasks_duplicate.py  test_tasks_empty.py  test_tasks_module.py  test_tasks_with_context.py
docs/: about.md  index.md  release-notes.md
docs/api/: context.md  environment.md  fluxqueue.md  index.md  models.md
docs/css/: extra.css
docs/examples/: django.md  fastapi.md  flask.md  index.md
docs/features/: context.md  index.md
docs/how-it-works/: client.md  index.md  worker.md
docs/tutorial/: defininig_and_exposing_tasks.md  index.md  installation.md  quickstart.md  worker.md
examples/fastapi/: README.md
examples/fastapi/src/: main.py
examples/fastapi/src/email/: core.py
examples/fastapi/src/tasks/: __init__.py  email.py
fastqueue/: __init__.py  core.py  fastqueue_core.pyi
fastqueue-cli/: Cargo.toml
fastqueue-cli/src/: main.rs
fastqueue-common/: Cargo.toml
fastqueue-common/src/: lib.rs  serialize.rs
fastqueue-common/src/redis/: client.rs  mod.rs
fastqueue-worker/: Cargo.toml
fastqueue-worker/scripts/: get_functions.py
fastqueue-worker/scripts/lua/: cleanup_worker_registry.lua  pop_ready_failed.lua  register_worker.lua
fastqueue-worker/src/: config.rs  lib.rs  logger.rs  main.rs  queue.rs  redis_client.rs  serialize.rs  task.rs  worker.rs
fastqueue/utils/: __init__.py  task.py
fluxqueue/: __init__.py  core.py  fluxqueue_core.pyi
python/fluxqueue/: __init__.py  _core.pyi  _task.py  client.py  context.py  core.py  fluxqueue_core.pyi  models.py
scripts/: build-worker.sh  check-prettier.sh  run-tests.sh  run-worker.sh  set_ld_path.sh
src/: lib.rs  redis_client.rs  runtime.rs
src/python/: call.rs
src/queue/: mod.rs  task.rs  worker.rs
tests/: __init__.py  _core.py  conftest.py  main.py  tasks.py  test.py  test_context.py  test_core.py  test_tasks.py  test_utils.py
tests/tt/: test.py
