[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/CCXLV/fluxqueue"
homepage = "https://fluxqueue.ccxlv.dev"
authors = ["Giorgi Merebashvili <mereba2627@gmail.com>"]

[workspace.dependencies]
fluxqueue-common = { path = "./crates/fluxqueue-common" }
