[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fluxqueue"
dynamic = ["version"]
description = "A blazingly fast, lightweight task queue for Python, powered by Rust"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache"
license-files = ["LICENSE"]
authors = [
    {name = "Giorgi Merebashvili", email = "mereba2627@gmail.com"}
]

[project.optional-dependencies]
dev = [
    "maturin",
    "black", 
    "ruff", 
    "mkdocs-material"
]
cli = ["fluxqueue-cli"]

[tool.maturin]
python-source = "."
module-name = "fluxqueue.fluxqueue_core"

[tool.black]
line-length = 79
include = '\.pyi?$'
preview = true

[tool.ruff]
[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # complexity
  "N806", # variable in function should be lowercase (allows CamelCase for pydantic models)
]
exclude = [".git", ".ruff_cache", ".venv", "tests/**"]
