[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fluxqueue"
dynamic = ["version"]
description = "A blazingly fast, lightweight task queue for Python, written in Rust"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Giorgi Merebashvili", email = "mereba2627@gmail.com"}
]

[project.urls]
Repository = "https://github.com/CCXLV/fluxqueue"
Documentation = "https://fluxqueue.ccxlv.dev"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest-asyncio",
    "python-dotenv",
    "redis",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "maturin",
]
tests = [
    "pytest-asyncio",
    "python-dotenv",
    "redis"
]
cli = ["fluxqueue-cli"]
docs = [
    "mkdocs-material", 
    "mkdocstrings",
    "mkdocstrings-python",
]
build = ["maturin"]

[tool.maturin]
python-source = "."
module-name = "fluxqueue.fluxqueue_core"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # complexity
  "N806", # variable in function should be lowercase (allows CamelCase for pydantic models)
]
exclude = [".git", ".ruff_cache", ".venv"]
