[package]
name = "fastqueue-common"
version = "0.1.0"
edition = "2024"

[lib]
name = "fastqueue_common"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
pyo3 = "0.27.2"
redis = { version = "1.0.2", features = ["connection-manager", "tokio-comp"] }
rmp-serde = "1.3.1"
rmpv = { version = "1.3.1", features = ["with-serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-pyobject = "0.8.0"
uuid = { version = "1.20.0", features = ["v4"] }
