[package]
name = "fastqueue-worker"
version = "0.1.0"
edition = "2024"

[lib]
name = "fastqueue_worker"
path = "src/lib.rs"

[dependencies]
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
uuid = { version = "1.19.0", features = ["v4"] }
fastqueue-common = { path = "../fastqueue-common", features = ["async"] }
redis = { version = "1.0.2", features = ["connection-manager", "tokio-comp"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "signal", "time"] }
