[package]
name = "fastqueue-worker"
version = "0.1.0-rc1"
edition = "2024"

[lib]
name = "fastqueue_worker"
path = "src/lib.rs"

[[bin]]
name = "fastqueue-worker"
path = "src/main.rs"

[dependencies]
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
uuid = { version = "1.20.0", features = ["v4"] }
redis = { version = "1.0.3", features = ["connection-manager", "tokio-comp"] }
tokio = { version = "1.49.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "time",
] }
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
rmp-serde = "1.3.1"
rmpv = { version = "1.3.1", features = ["with-serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["ansi", "env-filter"] }
clap = { version = "4.5.56", features = ["derive", "env"] }
anyhow = "1.0.100"
pythonize = "0.27.0"
chrono = "0.4.43"

fastqueue-common.workspace = true
