[package]
name = "fluxqueue_core"
version = "0.2.0"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
pyo3 = { version = "0.27.2", features = ["experimental-async"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync"] }
deadpool-redis = { version = "0.22.1", features = ["rt_tokio_1"] }
fluxqueue-common.workspace = true
