[package]
name = "fluxqueue-worker"
version = "0.2.1"
edition = "2024"

[lib]
name = "fluxqueue_worker"
path = "src/lib.rs"

[[bin]]
name = "fluxqueue-worker"
path = "src/main.rs"

[dependencies]
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
uuid = { version = "1.20.0", features = ["v4"] }
redis = "0.32.7"
deadpool-redis = { version = "0.22.1", features = ["rt_tokio_1"] }
tokio = { version = "1.49.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "time",
] }
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
rmp-serde = "1.3.1"
rmpv = { version = "1.3.1", features = ["with-serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "time"] }
time = { version = "0.3.47", features = ["local-offset", "macros"] }
clap = { version = "4.5.56", features = ["derive", "env"] }
anyhow = "1.0.100"
pythonize = "0.27.0"
chrono = "0.4.43"
num_cpus = "1.17.0"
futures = "0.3.32"

fluxqueue-common.workspace = true
