[package]
name = "fluxqueue-worker"
version = "0.3.2"
edition = "2024"

[lib]
name = "fluxqueue_worker"
path = "src/lib.rs"

[[bin]]
name = "fluxqueue-worker"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
pythonize = "0.28.0"
uuid = { version = "1.23.1", features = ["v4"] }
redis = "0.32.7"
deadpool-redis = { version = "0.22.1", features = ["rt_tokio_1"] }
tokio = { version = "1.52.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "time",
] }
rmp-serde = "1.3.1"
rmpv = { version = "1.3.1", features = ["with-serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [
  "env-filter",
  "fmt",
  "time",
] }
time = { version = "0.3.47", features = ["local-offset", "macros"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
anyhow = "1.0.102"
chrono = "0.4.44"
num_cpus = "1.17.0"
futures = "0.3.32"

fluxqueue-common.workspace = true
